--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -27,18 +27,29 @@ jobs:
       - name: Run Playwright tests
         run: npx playwright test
 
-      # Suppression de "Generate HTML report" car `show-report` ouvre un navigateur localement
-      # et ne fonctionne pas en CI (serveur sans interface graphique)
-
-      - uses: actions/upload-artifact@v4
+      - name: Upload report artifact
+        uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
         with:
           name: playwright-report
           path: playwright-report/
           retention-days: 30
 
+  deploy:
+    needs: test
+    if: always() # s’exécute même si le job test a échoué
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Download report artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: playwright-report
+          path: playwright-report
+
       - name: Deploy report to GitHub Pages
-        if: github.ref == 'refs/heads/main'
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
